yaml/guestbook-ingress-rules.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-deployments-expose
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: staging-guestbook.mstakx.io
    http:
      paths:
      - backend:
          serviceName: staging-guestbook-service
          servicePort: 80
  - host: guestbook.mstakx.io
    http:
      paths:
      - backend:
          serviceName: production-guestbook-service
          servicePort: 80
